# PortfolioApp

./: .gitignore  CLAUDE.md  README.md  TESTING.md  agents.md  package.json
.github/workflows/: test-plaid.yml
backend/: .coveragerc  .env.example  .env.test  create_tables.sql  database_schema.sql  dev.py  package.json  pyproject.toml  pytest.ini  test_api.py
backend/src/app/: main.py
backend/src/app/api/v1/: __init__.py  auth.py  plaid.py  portfolio.py
backend/src/app/config/: plaid.py
backend/src/app/core/: config.py  encryption.py  middleware.py
backend/src/app/schemas/: plaid.py
backend/src/app/services/: auth_service.py  plaid_service.py  portfolio_service.py
backend/tests/: conftest.py  test_data.py  test_plaid_api.py  test_plaid_security.py  test_plaid_service.py
frontend/: .env.test  eslint.config.js  package-lock.json  package.json  playwright.config.integration.ts  playwright.config.ts  vitest.config.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/(app)/: +layout.svelte
frontend/src/routes/(app)/accounts/[id]/: +page.svelte
frontend/src/routes/(app)/dashboard/: +page.svelte
frontend/src/routes/(auth)/: +layout.svelte
frontend/src/routes/(auth)/login/: +page.svelte
frontend/src/routes/(auth)/signup/: +page.svelte
frontend/tests/: plaid-link.spec.ts
frontend/tests/integration/: plaid-flow.spec.ts
